# agent-travel-uniapp

./: .gitignore  README.md
agent-server/: database.py  jwt.py  main.py  mcp_loader.py  model_prompt.py  pyproject.toml  safe_tool_node.py  state_graph.py  tools.py  tools_desc.py
agent-server/controllers/: chat.py  user.py
agent-server/core/: middleware.py  response.py
agent-server/models/: conversations_list.py  travel_archive.py  user.py
agent-server/schemas/: chat.py  user.py
agent-server/services/: chat.py  pdf_export.py
agent-user/: package.json  pnpm-lock.yaml
agent-user/src/: App.vue  env.d.ts  main.ts  manifest.json  pages.json  uni.scss
agent-user/src/api/: request.ts
agent-user/src/pages/archive/: index.vue
agent-user/src/pages/chat/: index.vue
agent-user/src/pages/chat/components/: chatInput.vue  gridCard.vue  history.vue  map.vue  plannerForm.vue  toolSteps.vue  voice.vue  welcome.vue  window.vue
agent-user/src/pages/index/: index.vue
agent-user/src/pages/login/: index.vue
agent-user/src/store/: index.ts
agent-user/src/types/: index.d.ts
